fix: fix white space when mobile size and make header also navbar mobile responsive

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 @import "tailwindcss";
 
+html,
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
